--- a/src/styles/components/_home.sass
+++ b/src/styles/components/_home.sass
@@ -1,2 +1,7 @@
 body
   background-color: skyblue
+  background: url('/assets/img/landing-background.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center center
+  height: 100vh
