--- a/src/styles/components/_container.sass
+++ b/src/styles/components/_container.sass
@@ -1,7 +1,7 @@
-body
+main#app
   background-color: skyblue
   background: url('/assets/img/landing-background.jpg')
   background-size: cover
   background-repeat: no-repeat
   background-position: center center
-  height: 100vh
+  height: calc(100vh - 56px)
