--- a/src/styles/components/_container.sass
+++ b/src/styles/components/_container.sass
@@ -4,4 +4,4 @@ main#app
   background-size: cover
   background-repeat: no-repeat
   background-position: center center
-  height: calc(100vh - 56px)
+  min-height: calc(100vh - 56px)
