get list, and goto list page

--- a/src/styles/components/_homepage.sass
+++ b/src/styles/components/_homepage.sass
@@ -7,7 +7,7 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-between
-    .housing-cat-item a
+    .housing-cat-item > span
       background-color: rgba(#eee, 0.85)
       padding: 15px 18px
       display: block
@@ -15,6 +15,3 @@
       border-radius: 2px
       text-transform: uppercase
       text-align: center
-      // width: calc(30%)
-      // &:first-of-type
-      //   width: calc(65%)
