--- a/src/styles/components/_container.sass
+++ b/src/styles/components/_container.sass
@@ -1,6 +1,6 @@
+
 main#app
-  background-color: skyblue
-  background: url('/assets/img/landing-background.jpg')
+  // background-color: skyblue
   background-size: cover
   background-repeat: no-repeat
   background-position: center center
