--- a/src/styles/components/_container.sass
+++ b/src/styles/components/_container.sass
@@ -4,4 +4,5 @@ main#app
   background-size: cover
   background-repeat: no-repeat
   background-position: center center
-  min-height: calc(100vh - 56px)
+  height: calc(100vh - 47px)
+  overflow-y: scroll
