--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,6 +1,8 @@
 // Base
 @import "./base/normalize"
+@import "./base/mixin"
 
 // Components
 @import "./components/container"
 @import "./components/homepage"
+@import "./components/listItem"
