--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -5,4 +5,6 @@
 // Components
 @import "./components/container"
 @import "./components/homepage"
+@import "./components/list"
 @import "./components/listItem"
+@import "./components/detail"
