--- a/src/styles/components/_listItem.sass
+++ b/src/styles/components/_listItem.sass
@@ -1,5 +1,6 @@
 .housing-list-item
   position: relative
+  cursor: pointer
   .price
     @include position(absolute, 0, null, null, 0)
     background-color: #2095F3
