--- a/src/styles/components/_detail.sass
+++ b/src/styles/components/_detail.sass
@@ -35,3 +35,27 @@
             background-size: contain
             background-position: center center
             background-repeat: no-repeat
+  .detail-map-container
+    width: 100%
+    height: 320px
+    .map-mark
+      @include eqsize(72px)
+      border-radius: 50%
+      background-image: radial-gradient(circle, #f4a9da, #f889ba, #f86692, #f14363, #e11e2f)
+      transform: translate(-50%, -50%)
+      opacity: 0.2
+      position: relative
+      animation: flash 2s linear infinite
+      &::after
+        @include position(absolute, calc(50% - 2px), null, null, calc(50% - 2px))
+        @include eqsize(4px)
+        border-radius: 50%
+        content: ""
+        background-color: blue
+      @keyframes flash
+        0%
+          opacity: 0.2
+        50%
+          opacity: 0.5
+        0%
+          opacity: 0.2
