--- a/src/styles/components/_detail.sass
+++ b/src/styles/components/_detail.sass
@@ -38,6 +38,9 @@
   .detail-information
     width: 30%
     margin: 10px 15px 10px 5px
+    .detail-housing
+      > span + span
+        margin-left: 10px
   .detail-map-container
     width: 100%
     height: 320px
